--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,186 +1,376 @@
-@media only screen and (max-width: 600px) {
+@media only screen and (max-width: 800px) {
   @font-face {
     src: url("../fonts/kiona/Kiona-Regular.ttf");
+
     font-family: kioma;
   }
+
   @font-face {
     src: url("../fonts/gotham/GothamMedium_1.ttf");
+
     font-family: gotham;
   }
 
   @font-face {
     src: url("../fonts/monsterrat/Montserrat-Regular.ttf");
+
     font-family: monsterr;
+  }
+
+  .i_card {
+    width: 100%;
+  }
+  .corona_card {
+    font-family: gotham;
+    background-color: white;
+    box-shadow: 0 2.8px 2.2px 0 rgba(0, 0, 0, 0.034);
+    padding: 15px;
+    width: 60%;
+    font-size: 85%;
+    height: auto;
+    overflow: hidden;
   }
   .card {
     background-color: white;
-    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.3);
-    width: 80%;
-    padding: 10px;
+
+    box-shadow: 0 2.8px 2.2px rgba(0, 0, 0, 0.034),
+      0 6.7px 5.3px rgba(0, 0, 0, 0.048), 0 12.5px 10px rgba(0, 0, 0, 0.06),
+      0 22.3px 17.9px rgba(0, 0, 0, 0.072), 0 41.8px 33.4px rgba(0, 0, 0, 0.086),
+      0 100px 80px rgba(0, 0, 0, 0.12);
+    border-radius: 5px;
+    width: 70%;
+    margin: 0;
+    height: 350px;
+    font-size: 20px;
   }
+  .small_card {
+    width: 100%;
+    margin: 0;
+    font-size: 35px;
+    height: 250px;
+    background: linear-gradient(to right, #8e2de2, #4a00e0);
+    color: white;
+  }
+  .india_card {
+    width: 100%;
+    margin: 0;
+    font-size: 35px;
+    height: 100px;
+    background: linear-gradient(to right, #00b4db, #0083b0);
+    color: white;
+  }
+  .text_in_india_card {
+    text-align: center;
+    vertical-align: middle;
+    line-height: 100px;
+  }
+  .small_card2 {
+    width: 100%;
+    margin: 0;
+    font-size: 35px;
+    height: 250px;
+    background: linear-gradient(to right, #02aab0, #00cdac);
+    color: white;
+  }
+  .small_card3 {
+    width: 100%;
+    margin: 0;
+    font-size: 35px;
+    height: 250px;
+    background: linear-gradient(to right, #00b4db, #0083b0);
+    color: white;
+  }
+
+  .text_in_small_card {
+    text-align: center;
+    vertical-align: middle;
+    line-height: 250px;
+  }
+  .text_in_card {
+    padding-left: 20px;
+    padding-right: 20px;
+    padding-top: 20px;
+    padding-bottom: 20px;
+    text-align: center;
+    vertical-align: middle;
+    font-family: monsterr;
+    font-size: 17px;
+  }
+
   .header {
     text-align: center;
+
     width: 100%;
+
     position: fixed;
+
     left: 50%;
+
     font-size: 45px;
+
     transform: translate(-50%, 0);
+
     color: black;
+
     background: linear-gradient(to right, #4b6cb7, #182848);
+
     padding-top: 15px;
+
     padding-bottom: 15px;
+
     padding-left: 15px;
+
     padding-right: 15px;
+
     font-family: gotham;
   }
+
   body,
   html {
     background: linear-gradient(to right, #4b6cb7, #182848);
+
     margin: 0;
+    -webkit-tap-highlight-color: transparent;
     font-family: kioma;
+    user-select: none;
+    scroll-behavior: smooth;
   }
+
   .content {
     width: 100%;
+
     height: 100%;
   }
+
   .line {
     display: none;
   }
+
   .back {
     text-decoration: none;
 
     padding-bottom: 20px;
 
     border-top: 1px solid silver;
+
     font-size: 22px;
 
     outline: none;
+
     font-family: kioma;
+
     transition: all 0.4s ease;
   }
+
   img {
     width: 100%;
   }
+
   .btn1 {
     text-decoration: none;
+
     padding-left: 25px;
+
     padding-top: 15px;
+
     padding-bottom: 15px;
+
     padding-right: 25px;
+
     background-size: 150%;
+
     border-radius: 5px;
+
     font-size: 20px;
+
     border: 2px solid white;
+
     color: white;
+
     outline: none;
+
     font-family: kioma;
+
     transition: all 0.2s ease;
+
     cursor: pointer;
   }
+
   .btn1:hover {
     background-color: white;
+
     color: #182848;
+
     transition: all 0.2s ease;
   }
+
   .nav2 {
     color: green;
   }
 
   .text {
     font-family: kioma;
-    font-size: 30px;
+
+    font-size: 45px;
+
     color: grey;
   }
+
   .row:after {
     content: "";
+
     clear: both;
+
     display: block;
   }
+
   .topnav {
     overflow: hidden;
+
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.1);
+
     font-family: kioma;
+
     position: fixed;
+
     width: 100%;
+
     background-color: white;
   }
 
   .topnav a {
     float: left;
+
     color: #000000;
+
     text-align: center;
+
     padding: 20px 20px;
+
     text-decoration: none;
+
     font-size: 20px;
   }
 
   .search {
     border: 1px solid gainsboro;
+
     background: #ffffff;
+
     padding-left: 25px;
+
     padding-right: 25px;
+
     padding-top: 10px;
+
     padding-bottom: 10px;
+
     border-radius: 4px;
+
     cursor: pointer;
+
     outline: none;
+
     color: black;
+
     text-decoration: none;
+
     font-family: kioma;
+
     font-size: 18px;
   }
+
   .search:hover {
     border: 1px solid #00ace6;
+
     color: white;
+
     box-shadow: 0 4px 28px 0 rgba(0, 0, 0, 0.1);
+
     background: #00ace6;
   }
+
   .login {
     border: 1px solid gainsboro;
+
     background: #ffffff;
+
     padding-left: 25px;
+
     padding-right: 25px;
+
     padding-top: 10px;
+
     padding-bottom: 10px;
+
     border-radius: 4px;
+
     cursor: pointer;
+
     outline: none;
+
     color: black;
+
     text-decoration: none;
+
     font-family: kioma;
+
     font-size: 18px;
   }
+
   .login:hover {
     border: 1px solid crimson;
+
     color: white;
+
     box-shadow: 0 4px 28px 0 rgba(0, 0, 0, 0.1);
+
     background: crimson;
   }
+
   .signup {
     border: 1px solid gainsboro;
+
     background: #ffffff;
+
     padding-left: 25px;
+
     padding-right: 25px;
+
     padding-top: 10px;
+
     padding-bottom: 10px;
+
     border-radius: 4px;
+
     cursor: pointer;
+
     outline: none;
+
     color: black;
+
     text-decoration: none;
+
     font-family: kioma;
+
     font-size: 18px;
   }
+
   .signup:hover {
     border: 1px solid #00cc66;
+
     color: white;
+
     box-shadow: 0 4px 28px 0 rgba(0, 0, 0, 0.1);
+
     background: #00cc66;
   }
 
   #snackbar {
     visibility: hidden;
+
     min-width: 350px;
+
     margin-left: -120px;
 
     background-color: #333;
@@ -188,6 +378,7 @@
     color: #fff;
 
     text-align: center;
+
     font-family: kioma;
 
     border-radius: 10px;
@@ -207,16 +398,20 @@
     visibility: visible;
 
     -webkit-animation: fadein 2s, fadeout 2s 10s;
+
     animation: fadein 2s, fadeout 2s 10s;
   }
 
   @-webkit-keyframes fadein {
     from {
       bottom: 0;
+
       opacity: 0;
     }
+
     to {
       bottom: 30px;
+
       opacity: 1;
     }
   }
@@ -224,10 +419,13 @@
   @keyframes fadein {
     from {
       bottom: 0;
+
       opacity: 0;
     }
+
     to {
       bottom: 30px;
+
       opacity: 1;
     }
   }
@@ -235,10 +433,13 @@
   @-webkit-keyframes fadeout {
     from {
       bottom: 30px;
+
       opacity: 1;
     }
+
     to {
       bottom: 0;
+
       opacity: 0;
     }
   }
@@ -246,10 +447,13 @@
   @keyframes fadeout {
     from {
       bottom: 30px;
+
       opacity: 1;
     }
+
     to {
       bottom: 0;
+
       opacity: 0;
     }
   }
@@ -257,221 +461,475 @@
 
 /* ---------------------------------PC/Laptop ----------------------------------------------------  */
 
-@media screen and (min-width: 640px) {
+@media screen and (min-width: 800px) {
   @font-face {
     src: url("../fonts/kiona/Kiona-Regular.ttf");
+
     font-family: kioma;
   }
+
   @font-face {
     src: url("../fonts/gotham/GothamMedium_1.ttf");
+
     font-family: gotham;
   }
 
   @font-face {
     src: url("../fonts/monsterrat/Montserrat-Regular.ttf");
+
     font-family: monsterr;
+  }
+  .corona_card {
+    font-family: gotham;
+    background-color: white;
+    box-shadow: 0 2.8px 2.2px 0 rgba(0, 0, 0, 0.034);
+    padding: 15px;
+    width: 45%;
+    font-size: 20px;
+    height: auto;
+    overflow: hidden;
+  }
+  .i_card {
+    width: 65%;
   }
   body,
   html {
     background: linear-gradient(to right, #4b6cb7, #182848);
+    scroll-behavior: smooth;
     margin: 0;
+    user-select: none;
     font-family: kioma;
+  }
+
+  .card {
+    cursor: pointer;
+    background-color: white;
+    box-shadow: 0 2.8px 2.2px rgba(0, 0, 0, 0.034),
+      0 6.7px 5.3px rgba(0, 0, 0, 0.048), 0 12.5px 10px rgba(0, 0, 0, 0.06),
+      0 22.3px 17.9px rgba(0, 0, 0, 0.072), 0 41.8px 33.4px rgba(0, 0, 0, 0.086),
+      0 100px 80px rgba(0, 0, 0, 0.12);
+    border-radius: 5px;
+    width: 500px;
+    margin: 0;
+    height: 400px;
+    font-size: 20px;
+  }
+  .small_card {
+    width: 100%;
+    margin: 0;
+    font-size: 35px;
+    height: 300px;
+    background: linear-gradient(to right, #8e2de2, #4a00e0);
+    background-size: 200%;
+    color: white;
+    transition: all 0.4s ease;
+  }
+  .small_card:hover {
+    background-position: 50%;
+    transition: all 0.4s ease;
+  }
+
+  .india_card {
+    width: 100%;
+    margin: 0;
+    font-size: 35px;
+    height: 120px;
+    background: linear-gradient(to right, #00b4db, #0083b0);
+    background-size: 200%;
+    color: white;
+    transition: all 0.4s ease;
+  }
+  .india_card:hover {
+    background-position: 50%;
+    transition: all 0.4s ease;
+  }
+  .text_in_india_card {
+    text-align: center;
+    vertical-align: middle;
+    line-height: 120px;
+    font-size: 60px;
+  }
+  .small_card2 {
+    width: 100%;
+    margin: 0;
+    font-size: 35px;
+    height: 300px;
+    background: linear-gradient(to right, #02aab0, #00cdac);
+    background-size: 200%;
+    color: white;
+    transition: all 0.4s ease;
+  }
+  .small_card2:hover {
+    background-position: 50%;
+    transition: all 0.4s ease;
+  }
+  .small_card3 {
+    width: 100%;
+    margin: 0;
+    font-size: 35px;
+    height: 300px;
+    background: linear-gradient(to right, #00b4db, #0083b0);
+    background-size: 200%;
+    color: white;
+    transition: all 0.4s ease;
+  }
+  .small_card3:hover {
+    background-position: 50%;
+    transition: all 0.4s ease;
+  }
+  .text_in_small_card {
+    text-align: center;
+    vertical-align: middle;
+    line-height: 300px;
+    font-size: 60px;
+  }
+  .text_in_card {
+    padding-left: 20px;
+    padding-right: 20px;
+    padding-top: 20px;
+    padding-bottom: 20px;
+
+    font-family: monsterr;
   }
   .header {
     text-align: center;
+
     width: 100%;
+
     position: fixed;
+
     left: 50%;
+
     font-size: 45px;
+
     transform: translate(-50%, 0);
+
     color: black;
+
     background: linear-gradient(to right, #4b6cb7, #182848);
+
     padding-top: 15px;
+
     padding-bottom: 15px;
+
     padding-left: 15px;
+
     padding-right: 15px;
+
     font-family: gotham;
   }
+
   .content {
     width: 100%;
+
     height: 100%;
   }
+
   .grid-container {
     display: grid;
+
     grid-template-columns: 40% auto;
+
     grid-gap: 5px;
+
     padding: 10px;
+
     width: 75%;
   }
+
   .tiles:nth-child(2) {
     color: black;
+
     background-color: rgb(248, 248, 248);
+
     border-radius: 2px;
+
     padding-top: 30px;
+
     padding-bottom: 30px;
+
     font-size: 15px;
+
     font-family: kioma;
 
     -moz-user-select: none;
+
     -webkit-user-select: none;
+
     user-select: none;
   }
 
   .line {
     display: block;
   }
+
   .back {
     text-decoration: none;
+
     padding-left: 35px;
+
     padding-top: 20px;
+
     padding-bottom: 20px;
+
     padding-right: 35px;
+
     border-radius: 5px;
+
     font-size: 22px;
+
     border: 1px solid gainsboro;
+
     width: 32%;
+
     outline: none;
+
     font-family: kioma;
+
     transition: all 0.4s ease;
   }
 
   .btn1 {
     text-decoration: none;
+
     padding-left: 35px;
+
     padding-top: 20px;
+
     padding-bottom: 20px;
+
     padding-right: 35px;
+
     background-size: 150%;
+
     border-radius: 5px;
+
     font-size: 22px;
+
     border: 2px solid white;
+
     color: white;
+
     outline: none;
+
     font-family: kioma;
+
     transition: all 0.2s ease;
+
     cursor: pointer;
   }
+
   .btn1:hover {
     background-color: white;
+
     color: #182848;
+
     transition: all 0.2s ease;
   }
+
   .text {
     font-family: kioma;
+
     font-size: 60px;
+
     color: grey;
   }
+
   .row:after {
     content: "";
+
     clear: both;
+
     display: block;
   }
+
   .topnav {
     overflow: hidden;
+
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.1);
+
     font-family: kioma;
+
     position: fixed;
+
     width: 100%;
+
     background-color: white;
   }
 
   .topnav a {
     color: #000000;
+
     text-align: center;
+
     padding: 20px 20px;
+
     text-decoration: none;
+
     font-size: 20px;
   }
+
   .teachers {
     border: 1px solid gainsboro;
+
     background: #ffffff;
+
     padding-left: 35px;
+
     padding-right: 35px;
+
     padding-top: 20px;
+
     padding-bottom: 20px;
+
     border-radius: 4px;
+
     cursor: pointer;
+
     outline: none;
+
     color: darkslategrey;
+
     text-decoration: none;
+
     font-family: kioma;
+
     font-size: 22px;
   }
+
   .teachers:hover {
     border: 1px solid #d24dff;
+
     color: white;
+
     box-shadow: 0 4px 28px 0 rgba(0, 0, 0, 0.1);
+
     background: #d24dff;
   }
+
   .search {
     border: 1px solid gainsboro;
+
     background: #ffffff;
+
     padding-left: 25px;
+
     padding-right: 25px;
+
     padding-top: 10px;
+
     padding-bottom: 10px;
+
     border-radius: 4px;
+
     cursor: pointer;
+
     outline: none;
+
     color: black;
+
     text-decoration: none;
+
     font-family: kioma;
+
     font-size: 24px;
   }
+
   .search:hover {
     border: 1px solid #00ace6;
+
     color: white;
+
     box-shadow: 0 4px 28px 0 rgba(0, 0, 0, 0.1);
+
     background: #00ace6;
   }
+
   .login {
     border: 1px solid gainsboro;
+
     background: #ffffff;
+
     padding-left: 25px;
+
     padding-right: 25px;
+
     padding-top: 10px;
+
     padding-bottom: 10px;
+
     border-radius: 4px;
+
     cursor: pointer;
+
     outline: none;
+
     color: black;
+
     text-decoration: none;
+
     text-decoration: none;
+
     font-family: kioma;
+
     font-size: 24px;
   }
+
   .login:hover {
     border: 1px solid crimson;
+
     color: white;
+
     box-shadow: 0 4px 28px 0 rgba(0, 0, 0, 0.1);
+
     background: crimson;
   }
+
   .signup {
     text-decoration: none;
+
     font-size: 24px;
+
     border: 1px solid gainsboro;
+
     background: #ffffff;
+
     padding-left: 25px;
+
     padding-right: 25px;
+
     padding-top: 10px;
+
     padding-bottom: 10px;
+
     border-radius: 4px;
+
     cursor: pointer;
+
     outline: none;
+
     color: black;
+
     text-decoration: none;
+
     font-family: kioma;
   }
+
   .signup:hover {
     border: 1px solid #00cc66;
+
     color: white;
+
     box-shadow: 0 4px 28px 0 rgba(0, 0, 0, 0.1);
+
     background: #00cc66;
   }
 
   #snackbar {
     visibility: hidden;
+
     min-width: 350px;
+
     margin-left: -120px;
 
     background-color: #333;
@@ -479,6 +937,7 @@
     color: #fff;
 
     text-align: center;
+
     font-family: monospace;
 
     border-radius: 10px;
@@ -498,16 +957,20 @@
     visibility: visible;
 
     -webkit-animation: fadein 2s, fadeout 2s 10s;
+
     animation: fadein 2s, fadeout 2s 10s;
   }
 
   @-webkit-keyframes fadein {
     from {
       bottom: 0;
+
       opacity: 0;
     }
+
     to {
       bottom: 30px;
+
       opacity: 1;
     }
   }
@@ -515,10 +978,13 @@
   @keyframes fadein {
     from {
       bottom: 0;
+
       opacity: 0;
     }
+
     to {
       bottom: 30px;
+
       opacity: 1;
     }
   }
@@ -526,10 +992,13 @@
   @-webkit-keyframes fadeout {
     from {
       bottom: 30px;
+
       opacity: 1;
     }
+
     to {
       bottom: 0;
+
       opacity: 0;
     }
   }
@@ -537,10 +1006,13 @@
   @keyframes fadeout {
     from {
       bottom: 30px;
+
       opacity: 1;
     }
+
     to {
       bottom: 0;
+
       opacity: 0;
     }
   }
